packages/dart_edge_http_server_runtime/lib/src/native/generated_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset(
  'package:dart_edge_http_server_runtime/dart_edge_http_server_runtime.dart',
)
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeTransportRequest>)>(
  isLeaf: true,
)
external void dart_edge_http_server_runtime_free_request(
  ffi.Pointer<NativeTransportRequest> value,
);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int dart_edge_http_server_runtime_native_abi_version();

@ffi.Native<
  ffi.Bool Function(
    ffi.Int64,
    ffi.Int32,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.IntPtr,
    ffi.Pointer<NativePair>,
  )
>()
external bool dart_edge_http_server_runtime_send_response(
  int request_id,
  int status,
  ffi.Pointer<ffi.Char> content_type,
  ffi.Pointer<ffi.Char> body,
  int header_count,
  ffi.Pointer<NativePair> headers,
);

@ffi.Native<
  ffi.Int64 Function(
    ffi.Pointer<ffi.Char>,
    ffi.Int64,
    ffi.Int64,
    ffi.Pointer<ffi.Char>,
    dart_edge_http_server_runtime_request_ready_callback_t,
  )
>()
external int dart_edge_http_server_runtime_start_server(
  ffi.Pointer<ffi.Char> host,
  int port,
  int worker_count,
  ffi.Pointer<ffi.Char> routes_json,
  dart_edge_http_server_runtime_request_ready_callback_t callback,
);

@ffi.Native<ffi.Void Function()>()
external void dart_edge_http_server_runtime_stop_server();

@ffi.Native<ffi.Pointer<NativeTransportRequest> Function(ffi.Int64)>()
external ffi.Pointer<NativeTransportRequest>
dart_edge_http_server_runtime_take_request(int request_id);

final class NativeBytes extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.IntPtr()
  external int len;
}

final class NativePair extends ffi.Struct {
  external NativeBytes key;

  external NativeBytes value;
}

final class NativeTransportRequest extends ffi.Struct {
  external NativeBytes route_id;

  @ffi.IntPtr()
  external int path_param_count;

  external ffi.Pointer<NativePair> path_params;

  @ffi.IntPtr()
  external int query_count;

  external ffi.Pointer<NativePair> query;

  @ffi.IntPtr()
  external int header_count;

  external ffi.Pointer<NativePair> headers;

  external NativeBytes body;

  @ffi.Uint8()
  external int body_kind;
}

typedef dart_edge_http_server_runtime_request_ready_callback_t =
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int64 request_id)>>;
